8201474: (so) Socket adaptor connect(InetAddress, timeout) succeeds when connection fails

Reviewed-by: bpb